[tool.poetry]
name = "swarm"
version = "0.1.0"
description = "Framework for building, orchestrating and deploying multi-assistant systems."
authors = ["OpenAI Solutions Team"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "3.9.3"
aiosignal = "1.3.1"
altair = "5.1.2"
annotated-types = "0.5.0"
anyio = "3.7.1"
appnope = "0.1.3"
arch = "6.2.0"
argon2-cffi = "23.1.0"
argon2-cffi-bindings = "21.2.0"
arrow = "1.2.3"
asttokens = "2.4.0"
async-lru = "2.0.4"
async-timeout = "4.0.3"
attrs = "23.1.0"
babel = "2.12.1"
backcall = "0.2.0"
beautifulsoup4 = "4.12.2"
black = "23.9.1"
bleach = "6.0.0"
blinker = "1.6.3"
blobfile = "2.0.2"
bs4 = "0.0.1"
build = "1.0.3"
cachecontrol = "0.13.1"
cachetools = "5.3.1"
certifi = "2023.7.22"
cffi = "1.16.0"
chardet = "3.0.4"
charset-normalizer = "3.3.0"
cleo = "2.1.0"
click = "8.1.7"
colorama = "0.4.6"
comm = "0.1.4"
contourpy = "1.1.1"
crashtest = "0.4.1"
cryptography = "41.0.4"
cycler = "0.12.0"
dataclasses-json = "0.6.1"
debugpy = "1.8.0"
decorator = "5.1.1"
defusedxml = "0.7.1"
deprecated = "1.2.14"
dirtyjson = "1.0.8"
distlib = "0.3.8"
distro = "1.8.0"
docker = "7.0.0"
dulwich = "0.21.7"
exceptiongroup = "1.1.3"
executing = "1.2.0"
fastjsonschema = "2.18.0"
ffprobe = "0.5"
filelock = "3.12.4"
fonttools = "4.43.0"
fqdn = "1.5.1"
frozenlist = "1.4.0"
fsspec = "2023.9.2"
ftfy = "6.1.1"
gitdb = "4.0.10"
gitpython = "3.1.37"
google-search-results = "2.4.2"
greenlet = "3.0.3"
grpcio = "1.60.1"
grpcio-tools = "1.60.1"
h11 = "0.14.0"
h2 = "4.1.0"
hpack = "4.0.0"
html2text = "2020.1.16"
httpcore = "1.0.1"
httpx = "0.25.1"
huggingface-hub = "0.16.4"
hyperframe = "6.0.1"
idna = "3.4"
importlib-metadata = "6.8.0"
importlib-resources = "6.1.0"
installer = "0.7.0"
ipykernel = "6.25.2"
ipython = "8.15.0"
ipython-genutils = "0.2.0"
ipywidgets = "8.1.1"
isoduration = "20.11.0"
jaraco-classes = "3.3.1"
jedi = "0.19.0"
jinja2 = "3.1.2"
joblib = "1.3.2"
json5 = "0.9.14"
jsonlines = "4.0.0"
jsonpatch = "1.33"
jsonpointer = "2.4"
jsonschema = "4.19.0"
jsonschema-specifications = "2023.7.1"
jupyter = "1.0.0"
jupyter-console = "6.6.3"
jupyter-events = "0.7.0"
jupyter-lsp = "2.2.0"
jupyter-client = "8.3.1"
jupyter-core = "5.3.1"
jupyter-server = "2.7.3"
jupyter-server-terminals = "0.4.4"
jupyterlab = "4.0.6"
jupyterlab-pygments = "0.2.2"
jupyterlab-widgets = "3.0.9"
jupyterlab-server = "2.25.0"
keyring = "24.3.0"
kiwisolver = "1.4.5"
langchain = "0.0.305"
langsmith = "0.0.41"
llama-index = "0.9.43"
lxml = "4.9.3"
markdown-it-py = "3.0.0"
markupsafe = "2.1.3"
marshmallow = "3.20.1"
matplotlib = "3.8.0"
matplotlib-inline = "0.1.6"
mdurl = "0.1.2"
mistune = "3.0.1"
more-itertools = "10.1.0"
msgpack = "1.0.7"
multidict = "6.0.4"
mypy-extensions = "1.0.0"
nbclient = "0.8.0"
nbconvert = "7.8.0"
nbformat = "5.9.2"
ndg-httpsclient = "0.5.1"
nest-asyncio = "1.5.8"
networkx = "3.2.1"
nltk = "3.8.1"
node = "1.2.1"
notebook = "7.0.4"
notebook-shim = "0.2.3"
numexpr = "2.8.7"
numpy = "^1.26.4"
odict = "1.9.0"
openai = "1.11.1"
opencv-python = "4.5.5.62"
outcome = "1.2.0"
overrides = "7.4.0"
packaging = "23.1"
pandas = "2.1.1"
pandocfilters = "1.5.0"
parso = "0.8.3"
pathspec = "0.11.2"
patsy = "0.5.3"
pexpect = "4.8.0"
pickleshare = "0.7.5"
pillow = "10.0.1"
pkginfo = "1.9.6"
platformdirs = "3.10.0"
plotly = "5.18.0"
plumber = "1.7"
poetry = "1.7.1"
poetry-core = "1.8.1"
poetry-plugin-export = "1.6.0"
portalocker = "2.8.2"
prettytable = "3.9.0"
prometheus-client = "0.17.1"
prompt-toolkit = "3.0.39"
protobuf = "4.24.4"
psutil = "5.9.5"
ptyprocess = "0.7.0"
pure-eval = "0.2.2"
pyarrow = "13.0.0"
pyasn1 = "0.4.8"
pycparser = "2.21"
pycryptodomex = "3.19.0"
pydantic = "2.4.2"
pydantic-core = "2.10.1"
pydeck = "0.8.1b0"
pydub = "0.25.1"
pygments = "2.16.1"
pyopenssl = "23.2.0"
pyparsing = "3.1.1"
pypdf = "3.16.2"
pyproject-hooks = "1.0.0"
pysocks = "1.7.1"
python-dateutil = "2.8.2"
python-json-logger = "2.0.7"
pytz = "2023.3.post1"
pyyaml = "6.0.1"
pyzmq = "25.1.1"
qdrant-client = "1.7.2"
qtconsole = "5.4.4"
qtpy = "2.4.0"
rapidfuzz = "3.6.1"
referencing = "0.30.2"
regex = "2023.8.8"
requests = "2.31.0"
requests-toolbelt = "1.0.0"
rfc3339-validator = "0.1.4"
rfc3986-validator = "0.1.1"
rich = "13.6.0"
rpds-py = "0.10.3"
scikit-learn = "1.3.2"
scipy = "^1.13.0"
selenium = "4.12.0"
send2trash = "1.8.2"
shellingham = "1.5.4"
six = "1.16.0"
smmap = "5.0.1"
sniffio = "1.3.0"
sortedcontainers = "2.4.0"
soupsieve = "2.5"
sqlalchemy = "2.0.21"
stack-data = "0.6.2"
statsmodels = "0.14.0"
streamlit = "1.27.2"
tenacity = "8.2.3"
terminado = "0.17.1"
threadpoolctl = "3.2.0"
tiktoken = "0.5.1"
tinycss2 = "1.2.1"
tokenizers = "0.14.0"
toml = "0.10.2"
tomli = "2.0.1"
tomlkit = "0.12.3"
toolz = "0.12.0"
tornado = "6.3.3"
tqdm = "4.66.1"
traitlets = "5.10.0"
trio = "0.22.2"
trio-websocket = "0.10.4"
trove-classifiers = "2024.1.31"
typing-inspect = "0.9.0"
typing-extensions = "4.8.0"
tzdata = "2023.3"
tzlocal = "5.1"
uri-template = "1.3.0"
urllib3 = "2.0.7"
validators = "0.22.0"
virtualenv = "20.25.0"
watchdog = "3.0.0"
wcwidth = "0.2.6"
webcolors = "1.13"
webencodings = "0.5.1"
websocket-client = "1.6.3"
widgetsnbextension = "4.0.9"
wrapt = "1.16.0"
wsproto = "1.2.0"
xattr = "0.10.1"
yarl = "1.9.2"
zipp = "3.17.0"
zope-component = "6.0"
zope-deferredimport = "5.0"
zope-deprecation = "5.0"
zope-event = "5.0"
zope-hookable = "6.0"
zope-interface = "6.1"
zope-lifecycleevent = "5.0"
zope-proxy = "5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
